# pywayland

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements-2-3.3.txt  requirements-dev.txt  requirements-pypy.txt  requirements-types.txt  requirements-wheel-build.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
compositor/: __main__.py  compositor.py  drm.py  ffi_build.py  launcher.py  log_utils.py  swc_client.py  udev.py
doc/: Makefile  conf.py  contributing.rst  index.rst  install.rst  protocol_build.py  scanner.rst  sphinx_wl_protocol.py
doc/module/: client.rst  index.rst  interface.rst  message.rst  protocol_core.rst  server.rst  utils.rst
doc/module/client/: display.rst  eventqueue.rst  index.rst  proxy.rst
doc/module/protocol_core/: interface.rst  proxy.rst  resource.rst
doc/module/scanner/: argument.rst  entry.rst  enum.rst  event.rst  index.rst  interface.rst  method.rst  printer.rst  protocol.rst  request.rst  scanner.rst
doc/module/server/: client.rst  display.rst  eventloop.rst  globals.rst  index.rst  listener.rst  resource.rst
example/: color_manager.py  simple-touch.py  simple_touch.py  surface.py  wlinfo.py
launch/: __main__.py  ffi_build.py
pywayland/: __init__.py  _ffi.pyi  dispatcher.py  ffi.py  ffi_build.py  interface.py  listener.py  message.py  proxy.py  pywayland_scanner.py  utils.py  version.py
pywayland/_ffi/: ffi.pyi  lib.pyi
pywayland/client/: __init__.py  display.py  eventqueue.py  proxy.py
pywayland/protocol/: __init__.py
pywayland/protocol_core/: __init__.py  argument.py  globals.py  interface.py  message.py  proxy.py  resource.py
pywayland/scanner/: __init__.py  __main__.py  argument.py  copyright.py  description.py  element.py  entry.py  enum.py  event.py  interface.py  method.py  printer.py  protocol.py  request.py  scanner.py
pywayland/server/: __init__.py  client.py  display.py  eventloop.py  globals.py  listener.py  resource.py
test/: test_client_destroy.py  test_event_queue.py  test_issue_61.py  test_protocol_interface.py  test_registry_bind.py  test_registry_query.py  test_resource.py  test_scanner.py  test_server_display.py  test_server_eventloop.py  test_utils.py
test/scanner_files/: __init__.py  core.py  events.py  requests.py  scanner-test-v1.xml  scanner_test_v1.py  test_scanner_input.xml  wl_core.py  wl_destructor.py  wl_events.py  wl_requests.py  wl_xfail.py  xfail.py
tests/: test_protocol_interface.py  test_registry_bind.py  test_registry_query.py  test_resource.py  test_scanner.py
tests/scanner_files/: core.py  destructor.py  events.py  requests.py  test_scanner_input.xml  xfail.py
