[metadata]
name = pywayland
author = Sean Vig
author_email = sean.v.775@gmail.com
license = Apache License 2.0
license_file = LICENSE
description = Python bindings for the libwayland library written in pure Python
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Desktop Environment :: Window Managers
  Topic :: Software Development :: Libraries
project_urls =
  Documentation = https://pywayland.readthedocs.io
  Code = https://github.com/flacjacket/pywayland
  Issue tracker = https://github.com/flacjacket/pywayland/issues

[options]
packages = find:
python_requires >= 3.5
setup_requires =
  cffi >= 1.12.0
  setuptools >= 40.5.0
install_requires =
  cffi >= 1.12.0
tests_require =
  pytest

[options.entry_points]
console_scripts =
  pywayland-scanner = pywayland.pywayland_scanner:main

[flake8]
max-line-length = 120

[mypy-cffi]
ignore_missing_imports = True
[mypy-pywayland._ffi]
ignore_missing_imports = True
