[metadata]
name = pywayland
version = attr:version.__version__
author = Sean Vig
author_email = sean.v.775@gmail.com
license = Apache License 2.0
license_file = LICENSE
description = Python bindings for the libwayland library written in pure Python
url: https://github.com/flacjacket/pywayland
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Desktop Environment :: Window Managers
  Topic :: Software Development :: Libraries
project_urls =
  Documentation = https://pywayland.readthedocs.io
  Code = https://github.com/flacjacket/pywayland
  Issue tracker = https://github.com/flacjacket/pywayland/issues

[options]
packages = find:
python_requires >= 3.6
setup_requires =
  cffi >= 1.12.0
  setuptools >= 40.5.0
install_requires =
  cffi >= 1.12.0
  dataclasses; python_version < '3.7'
tests_require =
  pytest
zip_safe = False

[options.entry_points]
console_scripts =
  pywayland-scanner = pywayland.pywayland_scanner:main

[options.package_data]
pywayland = py.typed

[options.packages.find]
exclude =
  test*

[flake8]
max-line-length = 120

[mypy]
python_version = 3.6
no_implicit_optional = True

[mypy-cffi]
ignore_missing_imports = True

[check-manifest]
ignore =
  .coveragerc
  doc/**
  example/**
  pywayland/protocol/*/*.py
  test/**
