[metadata]
name = pywayland
version = attr:pywayland.version.__version__
author = Sean Vig
author_email = sean.v.775@gmail.com
license = Apache License 2.0
license_files =
  LICENSE
description = Python bindings for the libwayland library written in pure Python
url: https://github.com/flacjacket/pywayland
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Desktop Environment :: Window Managers
  Topic :: Software Development :: Libraries
project_urls =
  Documentation = https://pywayland.readthedocs.io
  Code = https://github.com/flacjacket/pywayland
  Issue tracker = https://github.com/flacjacket/pywayland/issues

[options]
packages = find:
python_requires >= 3.8
setup_requires =
  cffi >= 1.12.0
install_requires =
  cffi >= 1.12.0
tests_require =
  pytest
zip_safe = False

[options.entry_points]
console_scripts =
  pywayland-scanner = pywayland.pywayland_scanner:main

[options.package_data]
pywayland = py.typed

[options.packages.find]
include =
  pywayland*

[flake8]
ignore = E501,W503

[mypy]
python_version = 3.8
disallow_subclassing_any = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_incomplete_stub = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-cffi]
ignore_missing_imports = True

[check-manifest]
ignore =
  .coveragerc
  doc/**
  example/**
  pywayland/protocol/*/*.py
